--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss';
+
+/* Opcional: Estilos base */
+html,
+body {
+  height: 100%;
+  background-color: #f8fafc;
+}
