--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,31 +1,21 @@
 <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-        
-        <!-- Logo Area -->
-        <div class="flex items-center gap-3">
-          <!-- Logo Image Confuturo -->
-          <div class="flex items-center cursor-pointer">
-            <img 
-              src="https://confuturo.cdn.modyo.com/uploads/8b600de0-361e-44a4-a3e3-731d12c53af1/original/logo-confuturo.jpg" 
-              alt="Confuturo" 
-              class="h-10 w-auto object-contain"
-            >
-          </div>
-          
-          <div class="h-6 w-px bg-slate-300 mx-2"></div>
-          <span class="text-slate-500 text-sm font-medium hidden sm:block">Portal de Pagos</span>
-        </div>
-
-        <!-- User Profile -->
-        <!-- <div class="flex items-center gap-4">
-          <div class="text-right hidden sm:block">
-            <p class="text-sm font-semibold text-slate-700">Juan Pérez</p>
-            <p class="text-xs text-slate-500">Tesorería</p>
-          </div>
-          <button class="h-9 w-9 rounded-full bg-slate-100 flex items-center justify-center text-slate-500 hover:bg-red-50 hover:text-[#FF4438] transition-colors cursor-pointer" title="Cerrar Sesión">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path></svg>
-          </button>
-        </div> -->
-
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
+    
+    <div class="flex items-center gap-2 sm:gap-3">
+      <div class="flex items-center cursor-pointer">
+        <img 
+          src="https://confuturo.cdn.modyo.com/uploads/8b600de0-361e-44a4-a3e3-731d12c53af1/original/logo-confuturo.jpg" 
+          alt="Confuturo" 
+          class="h-8 sm:h-10 w-auto object-contain" 
+        >
       </div>
-    </header>
+      
+      <div class="h-6 w-px bg-slate-300 mx-1 sm:mx-2"></div>
+      <span class="text-slate-500 text-xs sm:text-sm font-medium truncate max-w-[150px] sm:max-w-none">
+        Portal de Nóminas
+      </span>
+    </div>
+
+    
+  </div>
+</header>
